@@ -1,3 +1,4 @@
 require('prototypes/belt-brush')
 require('prototypes/belt-reverser')
 require('prototypes/belt-highlight')
+require('prototypes/auto-circuit')
