@@ -5,7 +5,7 @@
     "title": "Picker Belt Tools",
     "author": "Nexela",
     "contact": "nexela@gmail.com",
-    "dependencies": ["base >= 0.17.0", "stdlib >= 1.0.0", "PickerAtheneum >= 1.0.0"],
+    "dependencies": ["base >= 0.17.0", "stdlib >= 1.1.0", "PickerAtheneum >= 1.0.4"],
     "homepage": "",
     "description": "Beltbrush and Belt Reversing"
   }
