@@ -1,0 +1,2 @@
+[shortcut-name]
+picker-auto-circuit=Toggle Picker Auto Circuit Wires
