@@ -1,0 +1,17 @@
+data:extend{
+   {
+      type = "shortcut",
+      name = "picker-auto-circuit",
+      action = "lua",
+      technology_to_unlock = "circuit-network",
+      toggleable = true,
+      icon =
+         {
+            filename = "__base__/graphics/icons/red-wire.png",
+            priority = "extra-high-no-scale",
+            size = 32,
+            scale = 1,
+            flags = { "icon" }
+         }
+   }
+}
